--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "to-do-list",
-  "homepage": "https://github.com/Ferthronix224/To-Do-List.git",
+  "homepage": "https://ferthronix224.github.io/To-Do-List/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
